increase primary navigation columns to stop wrap

--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ p,
 
 	.primary-navigation {
 		display: grid;
-		grid-template-columns: 1fr repeat(3, auto) 1fr;
+		grid-template-columns: 1fr repeat(4, auto) 1fr;
 	}
 
 	.nav-item1 {
